@@ -51,3 +51,4 @@ Elmar Hoffmann
 Nicolas Kaiser
 Björn Knutsson
 Pimpon
+Jason A. Smith
